Remove unused imports